code: wasserstein distances for zipfs law added, thesis: plots updated

--- a/thesis/chapter1.tex
+++ b/thesis/chapter1.tex
@@ -3,7 +3,7 @@
 Search engine query logs are an important resource to promote research in information retrieval~\citep{agosti:2012}. They enable, for instance, analyzing user behavior and user experience, improving query suggestions and query reformulations or provide data to train retrieval models for re-ranking~\citep{reimer:2023}. Consequently, a vast access to search engine query logs would be highly beneficial for the research community. Additionally, public access to search engine query logs is valuable to create transparency and facilitate investigations on the fairness of major search engine's ranking algorithms~\citep{reimer:2023}. However, despite the high value of query logs, they remain publicly unavailable for the most part. This is due to multiple reasons. On the one hand, the publication of query logs brings up privacy concerns, as they contain sensitive information about the users~\citep{reimer:2023}. On the other hand, search engine operators' interests may not align with the previous mentioned motivations to publish query logs, as higher competition in the search engine market may arise or a comprehensive transparency of the search engines' behavior may simply not be desired in the first place by the operators~\citep{reimer:2023}. Nonetheless, a few public query logs exist, among which the AOL query log~\citep{pass:06} is the most prominent and comprehensive one~\citep{reimer:2023}. However, publicly available query logs are not on par with private query logs collected by major search engine operators. This applies for the mere size of the log, specifically the number of queries, but also for the temporal span the queries were collected in. Furthermore, publicly available query logs are outdated for the most part and lack an overall high quality in the aforementioned aspects~\citep{reimer:2023}. To fill this gap, \cite{reimer:2023} published a query log from a new source that had not been exploited before. A set of 356 million queries, stemming from the past 25 years, was collected from the \textit{Internet Archive}. The new resource, called the \textit{Archive Query Log} (AQL), is on par with private query logs in terms of number of queries, time span and further quality aspects. The scope of the AQL supports many tasks in information retrieval research and can be used to advance research in this field. This is however only possible if the query log is trustworthy and reflects realistic user bahaviour. In this thesis, we provide a comprehensive analysis of the AQL and aim to examine if the AQL reflects realistic user behaviour or if its queries are rather statistically biased. To accomplish this, we compare it to other publicly available query logs, which are known to show realistic user behaviour. The comparison is based on various metrics that aim to capture distinctive characteristics of a query log. The analysis in this thesis is composed of the following parts: 
 
 \begin{itemize}
-    \item \textbf{Descriptive-based:} We collect descriptive statistics from the query logs. This analysis aims at capturing structural charasteristics of the involved query logs. Frequency distributions of the query length, word length, word count, character count, search operator count and other variables are measured. In addition, we examine if the query logs comply with liguistic laws like zipf's law or the brevity law.     
+    \item \textbf{Descriptive-based:} We collect descriptive statistics from the query logs. This analysis aims at capturing structural charasteristics of the involved query logs. Frequency distributions of the query length, word length, word count, character count, search operator count and other variables are measured. In addition, we examine if the query logs comply with liguistic laws like zipf's law.     
     \item \textbf{Inference-based:} We infer characteristics from queries by applying various language models to them. The involved models either classify the queries on different taxonomies or extract meaningful information. The query logs are investigated with regard to spam, hate speech, not safe for work (NSFW), content, intent and named entities. In case that a model was trained on a different kind of text data than search engine query logs, a plausibility study is carried out to ensure its compatibility with our usecase.  
     \item \textbf{Temporal-based:} We utilize google trends to seek trends in the AQL. Furthermore, frequencies of selected queries are measured over time and compared among different query logs.   
     \item \textbf{Embedding-based:} We create vector embeddings from queries and investigate similarities between the different query logs. Clustering algorithms are applied to the embeddings and the resulting clusters are compared. 
