--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -71,6 +71,7 @@
 
 \usepackage{comment} % for commenting (added 2/22/2025)
 % \includecomment{comment}
+\usepackage{lipsum} % for commenting (added 3/4/2025)
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
 % Commenting (by your supervisor)
